# Prod-RAG

./: .env.example  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.celery  FRONTEND_API_GUIDE.md  README.md  docker-compose.yml  pyproject.toml  requirements-api.in  requirements-api.txt  requirements-celery.in  requirements-celery.txt
.github/workflows/: docker-publish.yml
app/: __init__.py  main.py
app/api/v1/: dependencies.py  router.py
app/api/v1/routes/: admin.py  auth.py  documents.py  evaluations.py  history.py  query.py
app/core/: __init__.py  config.py  logging.py  security.py
app/db/: mongodb.py  s3.py
app/evaluation/: __init__.py  rag.py
app/guardrails/: __init__.py  policy.py
app/ingestion/: chunking.py  indexer.py
app/memory/: __init__.py  base.py  redis_memory.py
app/observability/: __init__.py  base.py  langfuse_client.py  tracing.py
app/rag/: embeddings.py  fusion.py  llm.py  pipeline.py  rerankers.py  retrievers.py  sparse.py
app/schemas/: admin.py  auth.py  common.py  documents.py  evaluations.py  query.py  usage.py
app/workers/: celery_app.py  tasks.py
docs/: architecture.md  end-to-end.md
tests/: test_chunking.py  test_fusion.py  test_sparse.py
