[project]
name = "production-rag"
version = "0.1.0"
description = "Scalable modular backend for production RAG"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "celery>=5.4.0",
  "redis>=5.0.0",
  "httpx>=0.27.0",
  "qdrant-client>=1.10.0",
  "google-genai>=1.0.0",
  "langfuse>=2.36.0",
  "opentelemetry-api>=1.25.0",
  "opentelemetry-sdk>=1.25.0",
  "structlog>=24.2.0",
  "tenacity>=8.3.0",
  "motor>=3.4.0",
  "aioboto3>=12.4.0",
  "bcrypt>=4.0.0",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.9",
  "email-validator>=2.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
]
rerank = [
  "sentence-transformers>=3.0.0",
  "flashrank>=0.2.8",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
